<resources>
    <string name="app_name">Cukcuk lite</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_item_cost">Giá bán:</string>
    <string name="stop_selling">Ngừng bán</string>
    <string name="save">Cất</string>
    <string name="text_food_items_name">Tên món</string>
    <string name="star">*</string>
    <string name="text_unit">Đơn vị tính</string>
    <string name="text_color">Màu sắc</string>
    <string name="action_save">Cất</string>
    <string name="text_icon">Biểu tượng</string>
    <string name="text_status">Trạng thái</string>
    <string name="text_stop_selling">Ngừng bán</string>
    <string name="delete">Xóa</string>
    <string name="asset_folder">icondefault</string>
    <string name="button_cancel">Hủy bỏ</string>
    <string name="text_done">Xong</string>
    <string name="keyClear">C</string>
    <string name="str_minus">Giảm</string>
    <string name="str_plus">Tăng</string>
    <string name="img_content_description" />
    <string name="key7">7</string>
    <string name="key8">8</string>
    <string name="key9">9</string>
    <string name="minus">*</string>
    <string name="key4">4</string>
    <string name="key5">5</string>
    <string name="key6">6</string>
    <string name="plus">+</string>
    <string name="key1">1</string>
    <string name="key2">2</string>
    <string name="key3">3</string>
    <string name="key0">0</string>
    <string name="key000">000</string>
    <string name="btn_equal">=</string>
    <string name="text_comma">,</string>
    <string name="text_menu_list">Thực đơn</string>
    <string name="text_add_food_item">Thêm món</string>
    <string name="update_food_item">Sửa món</string>
    <string name="text_login">Đăng nhập</string>
    <string name="text_register">Đăng ký</string>
    <string name="button_save">Xong</string>
    <string name="text_add_cost">Nhập giá bán</string>
    <string name="text_add_unit_item">Thêm đơn vị tính</string>
    <string name="text_confirm_delete">Xóa món ăn</string>
    <string name="button_confirm">Có</string>
    <string name="text_description">Bạn có chắc muốn xóa không?</string>
    <string name="button_collect_money">Thu tiền</string>
    <string name="text_select_food_item">Chọn món</string>
    <string name="text_total_bill">Tổng tiền</string>
    <string name="text_null">0</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="text_add_amount">Nhập số lượng</string>
    <string name="text_add_number_of_table">Nhập số bàn</string>
    <string name="text_add_number_of_people">Nhập số người</string>
    <string name="text_bill">Hóa đơn</string>
    <string name="text_number">Số:</string>
    <string name="text_date">Ngày:</string>
    <string name="name_food_2">Tên hàng</string>
    <string name="text_amount">SL</string>
    <string name="cost">Đơn giá</string>
    <string name="money">Thành tiền</string>
    <string name="title_money">Số tiền phải trả</string>
    <string name="title_receive">Tiền khách đưa</string>
    <string name="title_return">Tiền trả lại cho khách</string>
    <string name="finish">Xong</string>
    <string name="text_table">Bàn:</string>
    <string name="action_done">Xong</string>
    <string name="text_sell">Bán hàng</string>
    <string name="text_add_number_of_receive">Nhập số tiền</string>
    <string name="text_cukcuk">CUKCUKLITE</string>
    <string name="total_revenue">Tổng \n doanh thu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_year">Năm nay</string>
    <string name="text_yesterday">Hôm qua</string>
    <string name="text_today">Hôm nay</string>
    <string name="text_this_week">Tuần này</string>
    <string name="text_this_month">Tháng này</string>
    <string name="text_report">Doanh thu</string>
    <string name="text_report_detail">Doanh thu theo mặt hàng</string>
    <string name="time">Thời gian</string>
    <string name="text_all_time">Toàn bộ</string>
    <string name="time_default">Gần đây</string>
    <string name="other">Khác</string>
    <string name="title_year_vertical_report">(Triệu đồng)</string>
    <string name="title_year_horizontal_report">(Tháng)</string>
    <string name="title_week_vertical_report">(Nghìn đồng)</string>
    <string name="title_week_horizontal_report">(Thứ)</string>
    <string name="title_month_vertical_report">(Nghìn đồng)</string>
    <string name="title_month_horizontal_report">(Ngày)</string>
    <string name="toast_unit_exist">Đơn vị đã tồn tại</string>
    <string name="toast_collect_success">Đã thu tiền thành công. Vui lòng chọn món mới.</string>
    <string name="toast_error_name">Tên không được trống</string>
    <string name="toast_add_success">Thêm thành công</string>
    <string name="toast_add_fail">Thêm thất bại</string>
    <string name="toast_edit_success">Sửa thành công</string>
    <string name="toast_edit_fail">Sửa thất bại</string>
    <string name="toast_delete_success">Đã xóa</string>
    <string name="toast_delete_fail_by_transaction">Không thể xóa vì món ăn này đã được giao dịch</string>
    <string name="toast_add_food">Hãy thêm ít nhất 1 món ăn</string>
</resources>
