<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/layout_margin_left_right_small"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_food_name"
            style="@style/text_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="start"
            android:padding="@dimen/layout_padding"
            android:text="@string/name_food_2" />

        <TextView
            android:id="@+id/tv_amount"
            style="@style/text_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/text_amount" />

        <TextView
            android:id="@+id/tv_food_cost"
            style="@style/text_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/layout_margin_left_right_small"
            android:layout_weight="3"
            android:gravity="end"
            android:text="@string/cost" />

        <TextView
            android:id="@+id/tv_total_paid"
            style="@style/text_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/layout_margin_left_right_small"
            android:layout_weight="4"
            android:gravity="end"
            android:text="@string/money" />
    </LinearLayout>

    <View
        android:id="@+id/vSeparate2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorUnderline" />
</LinearLayout>