<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <!--<include layout="@layout/view_title_dialog" />-->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10.0dip"
        android:paddingTop="5.0dip"
        android:paddingRight="10.0dip"
        android:paddingBottom="15.0dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="4.0">

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="4.0"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="4.0">

            <TextView
                android:id="@+id/dialog_key_btnKeyClear"
                style="@style/text_key_calculator"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/height_keyboard"
                android:layout_margin="@dimen/margin_keyboard"
                android:layout_weight="1.0"
                android:gravity="center"
                android:paddingTop="@dimen/layout_padding_top_bot"
                android:paddingBottom="@dimen/layout_padding_top_bot"
                android:text="@string/keyClear"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/dialog_key_btnKeyMinus"
                style="@style/text_key_calculator"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/height_keyboard"
                android:layout_margin="@dimen/margin_keyboard"
                android:layout_weight="1.0"
                android:gravity="center"
                android:paddingTop="@dimen/layout_padding_top_bot"
                android:paddingBottom="@dimen/layout_padding_top_bot"
                android:text="@string/str_minus"/>

            <TextView
                android:id="@+id/dialog_key_btnKeyPlus"
                style="@style/text_key_calculator"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/height_keyboard"
                android:layout_margin="@dimen/margin_keyboard"
                android:layout_marginRight="0.5dip"
                android:layout_weight="1.0"
                android:gravity="center"
                android:paddingTop="@dimen/layout_padding_top_bot"
                android:paddingBottom="@dimen/layout_padding_top_bot"
                android:text="@string/str_plus"/>

            <ImageButton
                android:id="@+id/dialog_key_btnKeyBack"
                style="@style/text_key_calculator"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/height_keyboard"
                android:layout_margin="@dimen/margin_keyboard"
                android:layout_weight="1.0"
                android:contentDescription="@string/img_content_description"
                android:src="@drawable/ic_arrow_back_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="4.0">

            <TextView
                android:id="@+id/dialog_key_btnKey7"
                style="@style/text_key_calculator"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/height_keyboard"
                android:layout_margin="@dimen/margin_keyboard"
                android:layout_weight="1.0"
                android:gravity="center"
                android:paddingTop="@dimen/layout_padding_top_bot"
                android:paddingBottom="@dimen/layout_padding_top_bot"
                android:text="@string/key7"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/dialog_key_btnKey8"
                style="@style/text_key_calculator"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/height_keyboard"
                android:layout_margin="@dimen/margin_keyboard"
                android:layout_weight="1.0"
                android:gravity="center"
                android:paddingTop="@dimen/layout_padding_top_bot"
                android:paddingBottom="@dimen/layout_padding_top_bot"
                android:text="@string/key8"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/dialog_key_btnKey9"
                style="@style/text_key_calculator"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/height_keyboard"
                android:layout_margin="@dimen/margin_keyboard"
                android:layout_marginRight="0.5dip"
                android:layout_weight="1.0"
                android:gravity="center"
                android:paddingTop="@dimen/layout_padding_top_bot"
                android:paddingBottom="@dimen/layout_padding_top_bot"
                android:text="@string/key9"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_key_minus"
                style="@style/text_key_calculator"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/height_keyboard"
                android:layout_margin="@dimen/margin_keyboard"
                android:layout_marginRight="0.5dip"
                android:layout_weight="1.0"
                android:gravity="center"
                android:paddingTop="@dimen/layout_padding_top_bot"
                android:paddingBottom="@dimen/layout_padding_top_bot"
                android:text="@string/minus"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="4.0">

            <TextView
                android:id="@+id/dialog_key_btnKey4"
                style="@style/text_key_calculator"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/height_keyboard"
                android:layout_margin="@dimen/margin_keyboard"
                android:layout_weight="1.0"
                android:gravity="center"
                android:paddingTop="@dimen/layout_padding_top_bot"
                android:paddingBottom="@dimen/layout_padding_top_bot"
                android:text="@string/key4"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/dialog_key_btnKey5"
                style="@style/text_key_calculator"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/height_keyboard"
                android:layout_margin="@dimen/margin_keyboard"
                android:layout_weight="1.0"
                android:gravity="center"
                android:paddingTop="@dimen/layout_padding_top_bot"
                android:paddingBottom="@dimen/layout_padding_top_bot"
                android:text="@string/key5"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/dialog_key_btnKey6"
                style="@style/text_key_calculator"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/height_keyboard"
                android:layout_margin="@dimen/margin_keyboard"
                android:layout_marginRight="0.5dip"
                android:layout_weight="1.0"
                android:gravity="center"
                android:paddingTop="@dimen/layout_padding_top_bot"
                android:paddingBottom="@dimen/layout_padding_top_bot"
                android:text="@string/key6"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_key_plus"
                style="@style/text_key_calculator"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/height_keyboard"
                android:layout_margin="@dimen/margin_keyboard"
                android:layout_marginRight="0.5dip"
                android:layout_weight="1.0"
                android:gravity="center"
                android:paddingTop="@dimen/layout_padding_top_bot"
                android:paddingBottom="@dimen/layout_padding_top_bot"
                android:text="@string/plus"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="4.0">

            <TextView
                android:id="@+id/dialog_key_btnKey1"
                style="@style/text_key_calculator"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/height_keyboard"
                android:layout_margin="@dimen/margin_keyboard"
                android:layout_weight="1.0"
                android:gravity="center"
                android:paddingTop="@dimen/layout_padding_top_bot"
                android:paddingBottom="@dimen/layout_padding_top_bot"
                android:text="@string/key1"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/dialog_key_btnKey2"
                style="@style/text_key_calculator"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/height_keyboard"
                android:layout_margin="@dimen/margin_keyboard"
                android:layout_weight="1.0"
                android:gravity="center"
                android:paddingTop="@dimen/layout_padding_top_bot"
                android:paddingBottom="@dimen/layout_padding_top_bot"
                android:text="@string/key2"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/dialog_key_btnKey3"
                style="@style/text_key_calculator"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/height_keyboard"
                android:layout_margin="@dimen/margin_keyboard"
                android:layout_marginRight="0.5dip"
                android:layout_weight="1.0"
                android:gravity="center"
                android:paddingTop="@dimen/layout_padding_top_bot"
                android:paddingBottom="@dimen/layout_padding_top_bot"
                android:text="@string/key3"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/dialog_key_btnKeyNegative"
                style="@style/text_key_calculator"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/height_keyboard"
                android:layout_margin="@dimen/margin_keyboard"
                android:layout_marginRight="0.5dip"
                android:layout_weight="1.0"
                android:gravity="center"
                android:paddingTop="@dimen/layout_padding_top_bot"
                android:paddingBottom="@dimen/layout_padding_top_bot"
                android:text="±"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="4.0">

            <TextView
                android:id="@+id/dialog_key_btnKey0"
                style="@style/text_key_calculator"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/height_keyboard"
                android:layout_margin="@dimen/margin_keyboard"
                android:layout_weight="1.0"
                android:gravity="center"
                android:paddingTop="@dimen/layout_padding_top_bot"
                android:paddingBottom="@dimen/layout_padding_top_bot"
                android:text="@string/key0"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/dialog_key_btnKey000"
                style="@style/text_key_calculator"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/height_keyboard"
                android:layout_margin="@dimen/margin_keyboard"
                android:layout_weight="1.0"
                android:gravity="center"
                android:paddingTop="@dimen/layout_padding_top_bot"
                android:paddingBottom="@dimen/layout_padding_top_bot"
                android:text="@string/key000"
                android:textStyle="normal" />

            <TextView
                android:text="@string/text_comma"
                android:id="@+id/dialog_key_btnKeyComma"
                style="@style/text_key_calculator"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/height_keyboard"
                android:layout_margin="@dimen/margin_keyboard"
                android:layout_marginRight="0.5dip"
                android:layout_weight="1.0"
                android:gravity="center"
                android:paddingTop="@dimen/layout_padding_top_bot"
                android:paddingBottom="@dimen/layout_padding_top_bot"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/dialog_key_btnAccept"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/height_keyboard"
                android:layout_margin="@dimen/margin_keyboard"
                android:layout_marginRight="0.5dip"
                android:layout_weight="1.0"
                android:gravity="center"
                android:paddingLeft="@dimen/layout_padding_left_right"
                android:paddingTop="@dimen/layout_padding_top_bot"
                android:paddingRight="@dimen/layout_padding_left_right"
                android:paddingBottom="@dimen/layout_padding_top_bot"
                android:text="@string/text_done"
                android:textColor="@android:color/white"
                android:textStyle="normal"
                android:visibility="visible"
                android:background="@color/colorPrimary"/>

            <TextView
                android:id="@+id/tv_key_equal"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/height_keyboard"
                android:layout_margin="@dimen/margin_keyboard"
                android:layout_marginRight="0.5dip"
                android:layout_weight="1.0"
                android:gravity="center"
                android:paddingLeft="@dimen/layout_padding_left_right"
                android:paddingTop="@dimen/layout_padding_top_bot"
                android:paddingRight="@dimen/layout_padding_left_right"
                android:paddingBottom="@dimen/layout_padding_top_bot"
                android:text="@string/btn_equal"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/font_size_medium"
                android:textStyle="normal"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>