<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="ToolbarTitle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_toolbar_title"
            style="@style/text_title_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/text_confirm_delete" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:lineSpacingMultiplier="1.5"
        android:id="@+id/tv_description"
        style="@style/text_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/layout_margin_top_bot"
        android:layout_marginBottom="@dimen/layout_margin_top_bot"
        android:padding="@dimen/layout_padding"
        android:text="@string/text_description" />

    <RelativeLayout
        android:background="@color/colorBackgroundSecondary"
        android:layout_below="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/layout_padding"
        android:paddingBottom="@dimen/layout_padding">

        <Button
            android:background="@drawable/selector_border_background_white"
            android:id="@+id/btn_cancel"
            style="@style/button_text_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/layout_margin_left_right"
            android:layout_toStartOf="@id/btn_confirm"
            android:text="@string/button_cancel" />

        <Button
            android:background="@drawable/selector_border_background_blue"
            android:id="@+id/btn_confirm"
            style="@style/button_text_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/btn_cancel"
            android:layout_marginEnd="@dimen/layout_margin_left_right"
            android:text="@string/button_confirm" />
    </RelativeLayout>
</RelativeLayout>